2004-12-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile: remove AFM support.

	* buildscripts/mf-to-table.py (base): remove AFM support.

	* lily/open-type-font.cc (design_size): use design_size

2004-12-17  Pedro Kroger  <kroeger@pedrokroeger.net>

	* lily/font-metric.cc (LY_DEFINE): Fix the docstring.

2004-12-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile: Generate combined aybabtu info.
	* mf/aybabtu.pe.in (i): Load it.

	* scm/framework-tex.scm (otf-font-load-command): Bugfix: subfonts
	are not symbols.

	* lily/include/open-type-font.hh (count): New method.

	* mf/aybabtu.pe.in: Typo.

	* Documentation/user/out/lilypond-internals.nexi (Scheme
	functions): Typo.

	* lily/include/guile-compatibility.hh (SCM_HASHTABLE_P): Add compat.

2004-12-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* buildscripts/gen-bigcheese-scripts.py (i): use symbols for
	subfonts.

	* scm/output-tex.scm (named-glyph): new function. This fixes TeX output.

	* scm/framework-tex.scm (otf-font-load-command): load subfonts.
	(tex-font-command-raw): new function.

	* lily/include/virtual-font-metric.hh (Module): remove file

	* lily/virtual-font-metric.cc (Module): remove file.
	

	* lily/open-type-font.cc (LY_DEFINE): ly:otf-font-glyph-info
	(get_indexed_char): read bbox from lily table if present.

2004-12-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile ($(outdir)/aybabtu.subfonts): rule for
	aybabtu.subfonts

	* mf/feta-beugel.mf (y): don't number consecutively, instead, use
	global glyphname. Enables more than 64 glyphs in the OTF.

2004-12-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/font.scm (add-music-fonts): Load aybabtu iso all separate
	braces.

	* lily/open-type-font.cc (design_size): Use 12 as default for
	design size.

	* mf/aybabtu.pe.in: New file.  Merge all our braces.

	* mf/GNUmakefile: Generate aybabtu.

	* tex/lilyponddefs.tex: teTeX 3.0 pdfetex fix.

2004-12-14  Jan Nieuwenhuizen  <janneke@gnu.org>
