@@ -1,5 +1,9 @@
 2004-12-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* mf/GNUmakefile: remove SAUTER_FONTS.
+
+	* scm/lily-library.scm (stderr): move stderr.
+
 	* mf/GNUmakefile: remove AFM support.
 
 	* buildscripts/mf-to-table.py (base): remove AFM support.
